--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body h2{
   margin-bottom:3px;
   margin-top:0;
   text-decoration:none;
-  color:black; style="text-color:black"
+  color:black; style="color:black"
 }
 #jemititle{
   border-bottom: gray 1px solid;
@@ -29,6 +29,7 @@ body h2{
   margin-bottom:30px;
   padding-bottom: 20px;
   text-decoration:none;
+  color: black;
 }
 #login{
   text-align:right;
