--- a/style.css
+++ b/style.css
@@ -109,3 +109,6 @@ body h2{
 ( background-image: url("title.jpg");
   background-position: center center;
   background-repeat: no-repeat;)
+
+a{
+    color:black;
