--- a/style.css
+++ b/style.css
@@ -106,9 +106,10 @@ body h2{
   display: grid;
   grid-template-columns: 1fr;
 }
+{
 ( background-image: url("title.jpg");
   background-position: center center;
-  background-repeat: no-repeat;)
+background-repeat: no-repeat;)}
 
 body a{
     color:black;
